# pkginfo

./: CLAUDE.md  LICENSE  README.md  docstrings.json  main.py  pyproject.toml
src/docstrings/: args.py  cli.py  impl.py
src/pkginfo/: __init__.py  args.py  impl.py  strings.py
tests/: test_cli_arginfo.py  test_cli_docstrings.py  test_extract_args.py  test_extract_docstrings.py
tests/fixtures/sample_package/: __init__.py  empty_module.py  submodule.py
