[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pkginfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "uv>=0.10.11",
]

[project.scripts]
docstrings = "pkginfo.strings:cli"
arginfo = "pkginfo.args:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
